Corrected spacing

--- a/css/cover.css
+++ b/css/cover.css
@@ -112,7 +112,7 @@ body {
  */
 
 .cover {
-  padding: 0 20px 150px;
+  padding: 0 20px 00px;
 }
 .cover .btn-lg {
   padding: 10px 20px;
